footer and intro

--- a/index.html
+++ b/index.html
@@ -25,8 +25,10 @@
 						<div class="content">
 							<div class="inner">
 								<h1>Edward Sun</h1>
-								<p>A fully responsive site template designed by <a href="https://html5up.net">HTML5 UP</a> and released<br />
-								for free under the <a href="https://html5up.net/license">Creative Commons</a> license.</p>
+								<p>Welcome to my personal site! I was born and raised in the Bay Area. Some of my interests include baking, reading, and photography.
+
+									If you want to reach out to me, send an email to me at edwardsun [at] uchicago [dot] edu
+								</p>
 							</div>
 						</div>
 						<nav>
@@ -415,7 +417,7 @@ print 'It took ' + i + ' iterations to sort the deck.';</code></pre>
 
 				<!-- Footer -->
 					<footer id="footer">
-						<p class="copyright">&copy; Untitled. Design: <a href="https://html5up.net">HTML5 UP</a>.</p>
+						<p class="copyright">&copy; Edward Sun </p>
 					</footer>
 
 			</div>
